Fix css bug on smaller screens

--- a/style.css
+++ b/style.css
@@ -147,14 +147,14 @@ figure {
     .two-col {
         display: flex;
         flex-direction: row;
-        max-width: 100vw;
+        justify-content: space-between;
+        width: 100%;
     }
 
     #me {
         height: 100px;
         width: 100px;
         padding-left: 0;
-        margin-left: 1rem;
     }
 }
 
